[package]
name = "darkmap"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { version = "49.0.0", features = [
    "ipc",
    "test_utils",
    "prettyprint",
    "json",
] }
bevy = { version = "0.12", features = ["jpeg"] }
bevy_panorbit_camera = "0.10.0"
bevy_mod_picking = "0.17.0"
clap = { version = "4.3", features = ["derive"] }
duckdb = { version = "0.9.2", features = ["bundled", "parquet"] }
dotenv = "0.15.0"
geo = { version = "0.27.0", features = [] }
# geo = { git = "https://github.com/georust/geo" }          # Vector2DOps
geozero = { version = "0.10.0", features = ["with-wkb"] }
geo-types = { version = "0.7.11" }
parquet = "49.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.25"
tokio = { version = "1.28" }
strum = "0.25.0"
strum_macros = "0.25.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
overflow-checks = false

[profile.release]
codegen-units = 1
